# macOSflippers

./: .gitignore  Cargo.toml  Info.plist  README_MACOS.md  build_macos.sh
src/: flipper_manager.rs  gpu_info_macos.rs  helpers.rs  main.rs  system_info.rs  system_info_macos.rs
