[package]
name = "flipper-monitor-macos"
version = "0.1.0"
edition = "2021"

[dependencies]
btleplug = "0.11"
tokio = { version = "1", features = ["full"] }
sysinfo = "0.30"
uuid = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"

# macOS-specific dependencies
[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9"
io-kit-sys = "0.4"
metal = "0.27"
objc = "0.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
